# squadx-live

./: .env.example  .gitignore  .prettierignore  README.md  TODO.md  eslint.config.js  package.json  pnpm-lock.yaml  railway.toml  tsconfig.json  turbo.json  vercel.json  vitest.config.ts
.claude/: settings.json  settings.local.json
.github/workflows/: deploy-livekit.yml  deploy-turn.yml  deploy-web.yml  pr-checks.yml  submit-packages.yml  tauri-release.yml
apps/desktop/: electron-builder.yml  electron.vite.config.ts  package.json  tailwind.config.js  test-direct.cjs  test-main.js  test-resolve.js  tsconfig.json  (+1 more)
apps/desktop-tauri/: MIGRATION.md  index.html  package.json  vite.config.ts
apps/desktop-tauri/src-tauri/: Cargo.toml  entitlements.plist  tauri.conf.json
apps/desktop-tauri/src-tauri/icons/: icon.icns
apps/desktop-tauri/src-tauri/src/: cache.rs  capture.rs  chat_realtime.rs  error.rs  input.rs  lib.rs  main.rs  realtime.rs  secure_storage.rs  state.rs  supabase.rs
apps/desktop-tauri/src-tauri/src/commands/: auth.rs  cache.rs  calendar.rs  capture.rs  chat.rs  google_calendar.rs  input.rs  mod.rs  session.rs  signaling.rs  utils.rs  validation.rs  window.rs
apps/desktop-tauri/src-tauri/src/utils/: calendar_grid.rs  datetime.rs  mod.rs  rrule.rs
docs/: API.md  ARCHITECTURE.md  CI-CD.md  DISTRIBUTION.md  FEATURES.md  LINUX-SETUP.md  MACOS_SIGNING.md  README.md  REALTIME-TRANSLATION.md  REMOTE-CONTROL.md  SCALING-ARCHITECTURE.md  SECURITY.md  TECH-STACK.md  USAGE_TRACKING.md  WEBRTC-FLOW.md  WINDOWS-SETUP.md
plans/: IMPLEMENTATION-PLAN.md  canvas_colaborativos_squadx.md  squadx_whiteboard_projeto.md
scripts/: generate-vapid-keys.mjs  release.mjs  setup-env.mjs  setup-secrets.sh  setup-vps.sh  submit-packages.ts  supabase-update-emails.ts  version-bump.mjs  vitest.config.ts
supabase/: all_migrations.sql
(+508 files in other folders)
